feat: docker configuration; configurable upload limits

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
             </label>
         </div>
         <h2 class="subtitle">
-            Limit 5 files. Max 16 MB total.
+            Limit {{ max_files }} files. Max {{ max_size }} total.
         </h2>
         <input class="button is-link" type="submit" value="Upload">
     </form>
