--- a/templates/skeleton.html
+++ b/templates/skeleton.html
@@ -29,7 +29,8 @@
             <div class="container">
                 <div class="navbar-brand">
                     <a class="navbar-item" href="/">
-                        <img src="{{ url_for('static', filename='image/logo.png') }}" alt="logo" title="Made with GIMP">
+                        <img src="{{ url_for('static', filename='image/logo.png') }}" alt="logo" title="Made with GIMP"
+                            width="72" height="28">
                     </a>
 
                     <div class="navbar-burger">
