docs: add GIMP attribution

--- a/templates/skeleton.html
+++ b/templates/skeleton.html
@@ -88,6 +88,8 @@
                 <strong><a href="https://jquery.com/">jQuery</a></strong>
                 &bull;
                 <strong><a href="http://flask.pocoo.org/">Flask</a></strong>
+                &bull;
+                <strong><a href="https://www.gimp.org/">GIMP</a></strong>
             </p>
             <p class="is-italic">
                 Please note: all uploaded files are public. Do not upload sensitive information!
