feat: integrate nltk wordnet dictionary

--- a/templates/skeleton.html
+++ b/templates/skeleton.html
@@ -91,6 +91,11 @@
                 &bull;
                 <strong><a href="https://www.gimp.org/">GIMP</a></strong>
             </p>
+            <p>
+                <strong><a href="https://www.nltk.org/">NLTK</a></strong>
+                &bull;
+                <strong><a href="https://wordnet.princeton.edu/">WordNet</a></strong>
+            </p>	    
             <p class="is-italic">
                 Please note: all uploaded files are public. Do not upload sensitive information!
             </p>
