--- a/templates/skeleton.html
+++ b/templates/skeleton.html
@@ -12,6 +12,10 @@
 
 	<link rel="manifest" href="/manifest.webmanifest">
 
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="FileBin">
+	<link rel="apple-touch-icon" href="{{ url_for('static', filename='image/favicon.png') }}">
+
 	<style>
          .subtitle {
              margin-top: 1rem;
