--- a/templates/skeleton.html
+++ b/templates/skeleton.html
@@ -12,9 +12,8 @@
 
 	<link rel="manifest" href="/manifest.webmanifest">
 
-	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-title" content="FileBin">
-	<link rel="apple-touch-icon" href="{{ url_for('static', filename='image/favicon.png') }}">
+	<link rel="apple-touch-icon" href="{{ url_for('static', filename='favicon.png') }}">
 
 	<style>
          .subtitle {
